--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
-    "mongoose-unique-validator": "^3.0.0"
+    "mongoose-unique-validator": "^3.0.0",
+    "underscore": "^1.13.2"
   }
 }
